feat: pruebas rápidas y full añadidas

--- a/validaciones/pyproject.toml
+++ b/validaciones/pyproject.toml
@@ -15,3 +15,7 @@ dependencies = [
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
+markers = [
+    "full: ejecuta las pruebas completas",
+    "fast: ejecuta las pruebas rápidas",
+]
