--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,6 @@ ENV/
 *.swp
 *.swo
 
-uv.lock
-
-.python-version
-
 # Base de datos
 data/
 *.db
@@ -43,3 +39,5 @@ test_catalogo/
 data_old/
 
 *.zip
+
+**/.pytest_cache/
